# esp32-features2d

./: .gitignore  README.md
components/esp32_s3_eye/: esp32_s3_eye.c  idf_component.yml
components/esp32_s3_eye/include/bsp/: esp32_s3_eye.h
components/modules/: CMakeLists.txt
components/modules/ai/: AppFeature2D.cpp  AppFeature2D.hpp  cv_opencv_features2d.cpp
components/modules/base/: __base__.hpp
components/modules/camera/: camera.cpp  camera.h  camera.hpp
components/modules/lcd/: lcd.c  lcd.cpp  lcd.hpp
examples/features2d/: CMakeLists.txt  sdkconfig.defaults
examples/obejct_tracking/: sdkconfig.defaults
examples/obejct_tracking/main/: main.cpp
features2d/: CMakeLists.txt  sdkconfig.defaults
features2d/components/esp32_s3_eye/: .component_hash  esp32_s3_eye.c
features2d/components/modules/: CMakeLists.txt
features2d/components/modules/ai/: cv_opencv_features2d.cpp  cv_opencv_features2d.hpp
features2d/components/modules/camera/: camera.c  camera.h
features2d/components/modules/lcd/: lcd.c  lcd.h
features2d/main/: CMakeLists.txt  cv_opencv_features2d.cpp  idf_component.yml  main.cpp
